Mods to vfio configs, and support for new VM's. Moved backup to new folder, with more excludes and notification support.

--- a/vfio/libvirt/hooks/kvm.conf
+++ b/vfio/libvirt/hooks/kvm.conf
@@ -13,3 +13,8 @@ HOST_CORES='0-7'      # Cores reserved for host
 HOST_CORES_MASK=FF00  #0b111111100000000
 GUEST_CORES_MASK=00FF
 VIRT_CORES='8-15'     # Cores reserved for virtual machine(s)
+
+# display stuff
+VM_DISPLAY="2"    # The display shown in `ddcutil detect`
+VM_INPUT="03"     # The input the VM is connected to (without 0x, but with leading zeroes, if any. See `ddcutil capabilities`)
+HOST_INPUT="11"   # The input the host is connected to (without 0x, but with leading zeroes, if any. See `ddcutil capabilities`)
