--- a/vfio/libvirt/hooks/kvm.conf
+++ b/vfio/libvirt/hooks/kvm.conf
@@ -1,18 +1,19 @@
 
 
 # HUGEPAGE MEMORY
-MEMORY=12288
+MEMORY=16384
 
 # IP for barrier
 VM_IP="192.168.122.76"
 
 # Ryzen 16 threads
-TOTAL_CORES='0-15'
-TOTAL_CORES_MASK=FFFF #0b1111111111111111
-HOST_CORES='0-7'      # Cores reserved for host
-HOST_CORES_MASK=FF00  #0b111111100000000
-GUEST_CORES_MASK=00FF
-VIRT_CORES='8-15'     # Cores reserved for virtual machine(s)
+TOTAL_CORES_MASK=FFFF # 0b1111111111111111
+HOST_CORES_MASK=F0F0  # 0b1111000011110000
+GUEST_CORES_MASK=0F0F # 0b0000111100001111
+
+HOST_CORES=0,1,2,8,9,10
+EMULATOR_CORES=3,11
+GUEST_CORES=4,12,5,13,6,14,7,15
 
 # display stuff
 VM_DISPLAY="2"    # The display shown in `ddcutil detect`
