--- a/vfio/libvirt/hooks/kvm.conf
+++ b/vfio/libvirt/hooks/kvm.conf
@@ -1,7 +1,7 @@
 
 
 # HUGEPAGE MEMORY
-MEMORY=16384
+MEMORY=20480
 
 # IP for barrier
 VM_IP="192.168.122.76"
@@ -16,6 +16,6 @@ EMULATOR_CORES=3,11
 GUEST_CORES=4,12,5,13,6,14,7,15
 
 # display stuff
-VM_DISPLAY="2"    # The display shown in `ddcutil detect`
-VM_INPUT="03"     # The input the VM is connected to (without 0x, but with leading zeroes, if any. See `ddcutil capabilities`)
-HOST_INPUT="11"   # The input the host is connected to (without 0x, but with leading zeroes, if any. See `ddcutil capabilities`)
+VM_DISPLAY="1"    # The display shown in `ddcutil detect`
+VM_INPUT="0f"     # The input the VM is connected to (without 0x, but with leading zeroes, if any. See `ddcutil capabilities`)
+HOST_INPUT="12"   # The input the host is connected to (without 0x, but with leading zeroes, if any. See `ddcutil capabilities`)
